--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" th:href="@{.bootstrape.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
 <div clas="container my-3">
     <table class="table">
         <thead class="table-dark">
